# DashApp

./: .gitignore  LICENSE  README.md
DashApp/: pyproject.toml
DashApp/dashapp/: app.py
DashApp/data/: ukpn-flexibility-dispatches.csv
DashApp/tests/: test_dashapp.py
