[tool.poetry]
name = "DashApp"
version = "0.1.0"
description = ""
authors = ["mgiles717 <mgiles717@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.16.1"
pandas = "^2.2.2"
pytest = "^8.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
